force-app/main/default/objects/CaseTemplate__c/CaseTemplate__c.object-meta.xml
<CustomObject>
    <label>カスタマーサポートテンプレート</label>
    <nameField>
        <label>カスタマーサポートテンプレート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>