force-app/main/default/objects/CaseTemplate__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>対応依頼票転記内容</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>