force-app/main/default/objects/CaseTemplate__c/fields/ResponseDetails__c.field-meta.xml
<CustomField>
    <fullName>ResponseDetails__c</fullName>
    <label>問い合わせ詳細（社内用）</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>